prototypes/primordial/testdata/package/bad_package_decl_lower_ID.out
** Line 2, column 8: syntax error, unexpected lower identifier, expecting upper identifier

FAIL

