prototypes/primordial/testdata/package/bad_package_decl_lower_ID.p
# Expected: fail (wanted UPPER_ID, got LOWER_ID)
package example
